feat: forgot password and verify email
