# internal/api/response/email_verification.go
@@ -1,0 +1,5 @@
+package response
+
+type EmailVerificationResponse struct {
+	EmailVerified bool `json:"emailVerified"`
+}
